syntax = "proto3";

package auth.v1;

import "common/v1/session.proto";
import "common/v1/user.proto";

option go_package = "github.com/bahmN/rocket-factory/shared/pkg/proto/auth/v1;authV1";

service AuthService{
  rpc Login(LoginRequest) returns(LoginResponse);
  rpc Whoaim(WhoaimRequest) returns(WhoaimResponse);
}

message LoginRequest{
  string login = 1;
  string password = 2;
}

message LoginResponse{
  string session_uuid = 1;
}

message WhoaimRequest{
  string session_uuid = 1;
}

message WhoaimResponse{
  common.v1.Session session = 1;
  common.v1.User user = 2;
}
